--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: helidon-movie-api-mp
+  name: helidon-movie
   labels:
     commit: ${GIT_COMMIT}
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: helidon-movie-api-mp
+      app: helidon-movie
   template:
     metadata:
       labels:
-        app: helidon-movie-api-mp
+        app: helidon-movie
         commit: ${GIT_COMMIT}
         color: blue
     spec:
       containers:
-      - name: helidon-movie-api-mp
+      - name: helidon-movie
         image: ${params.DOCKER_REGISTRY}/${params.DOCKER_REPO}:${GIT_COMMIT}
         imagePullPolicy: Always
         ports:
-        - name: helidon-movie-api-mp
+        - name: helidon-movie
           containerPort: 8080
           protocol: TCP
       imagePullSecrets:
@@ -30,16 +30,16 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: helidon-movie-api-mp
+  name: helidon-movie
   labels:
-    app: helidon-movie-api-mp
+    app: helidon-movie
     commit: ${GIT_COMMIT}
 spec:
   ports:
   - port: 8080
     targetPort: 8080
   selector:
-    app: helidon-movie-api-mp
+    app: helidon-movie
     color: blue
   type: ClusterIP
 ---
