--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -22,8 +22,8 @@ server.port=8080
 server.host=0.0.0.0
 
 javax.sql.DataSource.oracle.dataSourceClassName=oracle.jdbc.pool.OracleDataSource
-#javax.sql.DataSource.oracle.dataSource.url=jdbc:oracle:thin:@132.145.90.101:1521:MOVIEDB
-javax.sql.DataSource.oracle.dataSource.url=jdbc:oracle:thin:@132.145.91.143:1521:OKEDB
+javax.sql.DataSource.oracle.dataSource.url=jdbc:oracle:thin:@140.238.11.219:1521:MOVIEDB
+#javax.sql.DataSource.oracle.dataSource.url=jdbc:oracle:thin:@132.145.91.143:1521:OKEDB
 javax.sql.DataSource.oracle.dataSource.user=MOVIE
 javax.sql.DataSource.oracle.dataSource.password=WelCome123##
 
