--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: helidon-movie
   labels:
-    commit: ${GIT_COMMIT}
+    commit: eda521cb1e97cfa7727b3e98ad0a5136bcb301e3
 spec:
   replicas: 2
   selector:
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: helidon-movie
-        image: ${DOCKER_REGISTRY}/${DOCKER_REPO}:${GIT_COMMIT}
+        image: ${DOCKER_REGISTRY}/${DOCKER_REPO}:eda521cb1e97cfa7727b3e98ad0a5136bcb301e3
         imagePullPolicy: Always
         ports:
         - name: helidon-movie
@@ -33,7 +33,7 @@ metadata:
   name: helidon-movie
   labels:
     app: helidon-movie
-    commit: ${GIT_COMMIT}
+    commit: eda521cb1e97cfa7727b3e98ad0a5136bcb301e3
 spec:
   ports:
   - port: 8080
